fullSandbox11072023/force-app/main/default/objects/VPS__c/VPS__c.object-meta.xml
<CustomObject>
    <label>Specialty Contracts</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Specialty Contracts</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>