fullSandbox11072023/force-app/main/default/objects/VPS__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>What account is the contract with?</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>VPS_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>