fullSandbox11072023/force-app/main/default/objects/VPS__c/fields/Account_Address__c.field-meta.xml
<CustomField>
    <fullName>Account_Address__c</fullName>
    <formula>Account__r.Billing_Address_Full__c</formula>
    <label>Account Address</label>
    <type>Text</type>
</CustomField>