fullSandbox11072023/force-app/main/default/objects/VPS__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Manual field that gets checked by contract specialist that signifies if the contract is active or not.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>