fullSandbox11072023/force-app/main/default/objects/VPS__c/fields/Aerosol_Therapy_Consumables_This_year__c.field-meta.xml
<CustomField>
    <fullName>Aerosol_Therapy_Consumables_This_year__c</fullName>
    <label>*Aerosol Therapy Consumables YTD</label>
    <summarizedField>VPS_Consumables__c.Sales__c</summarizedField>
    <summaryFilterItems>
        <field>VPS_Consumables__c.Product_Grouping_TXT__c</field>
        <operation>equals</operation>
        <value>Aerosol Therapy</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>VPS_Consumables__c.Current_Sales_2__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>VPS_Consumables__c.VPS_Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>