fullSandbox11072023/force-app/main/default/objects/VPS__c/fields/Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Type__c</fullName>
    <description>Currently only for Heater Contracts</description>
    <inlineHelpText>Specifies if the contract is EPA, Addendum or Evaluation. If this is an Evaluation that is turning into an EPA, deactivate this record and create a new record for the EPA.</inlineHelpText>
    <label>Agreement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EPA</fullName>
            </value>
            <value>
                <fullName>Addendum</fullName>
            </value>
            <value>
                <fullName>Product Evaluation</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>