fullSandbox11072023/force-app/main/default/objects/VPS__c/fields/Consumable_Attainment__c.field-meta.xml
<CustomField>
    <fullName>Consumable_Attainment__c</fullName>
    <description>Number of days between Loaner Start Date (Adjusted) and today</description>
    <formula>TODAY()-Loaner_Start_Date_Adjusted__c</formula>
    <inlineHelpText>Number of days passed in 12 month period.</inlineHelpText>
    <label>Consumable Attainment Days In</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>