fullSandbox11072023/force-app/main/default/objects/VPS__c/fields/Consumable_Attainment_Days_Left__c.field-meta.xml
<CustomField>
    <fullName>Consumable_Attainment_Days_Left__c</fullName>
    <description>Number of days between today and Loaner End Date (Adjusted)</description>
    <formula>Loaner_End_Date_Adjusted__c-TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of days left in 12 month period</inlineHelpText>
    <label>Consumable Attainment Days Left</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>