fullSandbox11072023/force-app/main/default/objects/VPS__c/fields/Consumable_Committment__c.field-meta.xml
<CustomField>
    <fullName>Consumable_Committment__c</fullName>
    <inlineHelpText>Manual field for Consumable Commitment to be filled out by Contract Specialist</inlineHelpText>
    <label>Consumable Committment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>