fullSandbox11072023/force-app/main/default/objects/VPS__c/fields/Consumable_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Consumable_Forecast__c</fullName>
    <description>Consumable Spend/Consumable Attainment Days = Daily Spend*30 = monthly spend</description>
    <formula>(Consumable_Spend__c/Consumable_Attainment__c)*Consumable_Attainment_Days_Left__c+Consumable_Spend__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Amount customer will spend for 12 month period using their previous purchases for run rate.</inlineHelpText>
    <label>Consumable Forecast</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>