fullSandbox11072023/force-app/main/default/objects/VPS__c/fields/Consumable_Spend__c.field-meta.xml
<CustomField>
    <fullName>Consumable_Spend__c</fullName>
    <inlineHelpText>Sales from Loaner Start Date (Adjusted) date to today</inlineHelpText>
    <label>Consumable Spend</label>
    <summarizedField>VPS_Consumables__c.Sales__c</summarizedField>
    <summaryFilterItems>
        <field>VPS_Consumables__c.Current_Sales_2__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>VPS_Consumables__c.Resp_Heater_Consumables_WF__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>VPS_Consumables__c.VPS_Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>