fullSandbox11072023/force-app/main/default/objects/VPS__c/fields/Days_to_Expire__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Expire__c</fullName>
    <formula>Loaner_Expiration_Date__c - Today ()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of days to expiration date</inlineHelpText>
    <label>Days to Expire</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>