fullSandbox11072023/force-app/main/default/objects/VPS__c/fields/Lease_Contract__c.field-meta.xml
<CustomField>
    <fullName>Lease_Contract__c</fullName>
    <inlineHelpText>manual field to be filled out by contract specialist or add as Subscription.  For Judy&apos;s use only</inlineHelpText>
    <label>Lease Contract # or Subscription</label>
    <length>20</length>
    <type>Text</type>
</CustomField>