fullSandbox11072023/force-app/main/default/objects/VPS__c/fields/Loaner_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Loaner_Expiration_Date__c</fullName>
    <inlineHelpText>manual field to be filled out by contract specialist</inlineHelpText>
    <label>Loaner Expiration Date</label>
    <type>Date</type>
</CustomField>