fullSandbox11072023/force-app/main/default/objects/VPS__c/fields/Loaner_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Loaner_Start_Date__c</fullName>
    <inlineHelpText>manual field to be filled out by contract specialist</inlineHelpText>
    <label>Loaner Start Date</label>
    <type>Date</type>
</CustomField>