fullSandbox11072023/force-app/main/default/objects/VPS__c/fields/Loaner_Start_Date_Adjusted__c.field-meta.xml
<CustomField>
    <fullName>Loaner_Start_Date_Adjusted__c</fullName>
    <formula>if(MONTH(Loaner_Expiration_Date__c) &gt;= MONTH(TODAY()), 
/* Previous Year */ 
DATE(YEAR(TODAY())-1,MONTH(Loaner_Expiration_Date__c),1), 
/* Current Year */ 
DATE(YEAR(TODAY()),MONTH(Loaner_Expiration_Date__c),1) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loaner Start Date (Adjusted)</label>
    <type>Date</type>
</CustomField>