fullSandbox11072023/force-app/main/default/objects/VPS__c/fields/Manager_Active__c.field-meta.xml
<CustomField>
    <fullName>Manager_Active__c</fullName>
    <formula>Sales_Rep__r.Manager.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager Active?</label>
    <type>Checkbox</type>
</CustomField>