fullSandbox11072023/force-app/main/default/objects/VPS__c/fields/Over_Under__c.field-meta.xml
<CustomField>
    <fullName>Over_Under__c</fullName>
    <formula>IF

(Consumable_Forecast__c&gt;Consumable_Committment__c,

IMAGE(&quot;/servlet/servlet.FileDownload?file=0154400000AaopP&quot;,&quot;NO&quot;),
IMAGE(&quot;/servlet/servlet.FileDownload?file=0154400000Aap3M&quot;,&quot;NO&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If the customer is expected to meet their Consumable Commitment based on the Consumable Forecast, then this field will be green. If not, this will be red.</inlineHelpText>
    <label>Over/Under</label>
    <type>Text</type>
</CustomField>