fullSandbox11072023/force-app/main/default/objects/VPS__c/fields/Prior_Year_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Prior_Year_Quantity__c</fullName>
    <label>Prior Year Quantity</label>
    <summarizedField>VPS_Consumables__c.Prior_Year_Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>VPS_Consumables__c.Product_Class_Text__c</field>
        <operation>notEqual</operation>
        <value>Respiratory</value>
    </summaryFilterItems>
    <summaryForeignKey>VPS_Consumables__c.VPS_Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>