fullSandbox11072023/force-app/main/default/objects/VPS__c/fields/R203P14__c.field-meta.xml
<CustomField>
    <fullName>R203P14__c</fullName>
    <inlineHelpText>MicroMaxTM High Flow (DISS Connection)</inlineHelpText>
    <label>R203P14</label>
    <summarizedField>VPS_Consumables__c.Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>VPS_Consumables__c.Product_Text__c</field>
        <operation>equals</operation>
        <value>R203P14</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>VPS_Consumables__c.Sales__c</field>
        <operation>equals</operation>
        <value>0,</value>
    </summaryFilterItems>
    <summaryForeignKey>VPS_Consumables__c.VPS_Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>