fullSandbox11072023/force-app/main/default/objects/VPS__c/fields/R211P03_036__c.field-meta.xml
<CustomField>
    <fullName>R211P03_036__c</fullName>
    <inlineHelpText>MaxVenturi® Blender Setup</inlineHelpText>
    <label>R211P03-036</label>
    <summarizedField>VPS_Consumables__c.Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>VPS_Consumables__c.Product_Text__c</field>
        <operation>equals</operation>
        <value>R211P03-036</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>VPS_Consumables__c.Sales__c</field>
        <operation>equals</operation>
        <value>0,</value>
    </summaryFilterItems>
    <summaryForeignKey>VPS_Consumables__c.VPS_Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>