fullSandbox11072023/force-app/main/default/objects/VPS__c/fields/Rep_Active__c.field-meta.xml
<CustomField>
    <fullName>Rep_Active__c</fullName>
    <description>A checkbox to signify if a sales rep is active or not</description>
    <formula>Sales_Rep__r.IsActive</formula>
    <label>Rep Active?</label>
    <type>Checkbox</type>
</CustomField>