fullSandbox11072023/force-app/main/default/objects/VPS__c/fields/Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Manual fields filled out by Contract Specialist.</inlineHelpText>
    <label>Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>VPS_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>