fullSandbox11072023/force-app/main/default/objects/VPS__c/fields/Sales_Rep_Region__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Region__c</fullName>
    <formula>TEXT(Sales_Rep__r.Region__c)</formula>
    <label>Sales Rep Region</label>
    <type>Text</type>
</CustomField>