fullSandbox11072023/force-app/main/default/objects/VPS__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&quot;No Alerts Sent&quot;</defaultValue>
    <description>Workflow emails alerts updates this field when workflow fires.</description>
    <inlineHelpText>This field will tell you if an email alert has been sent to the Sales Rep. If one has, it will tell you what the last email alert sent was.</inlineHelpText>
    <label>Status</label>
    <length>25</length>
    <type>Text</type>
</CustomField>