fullSandbox11072023/force-app/main/default/objects/VPS__c/fields/Total_of_Units_2__c.field-meta.xml
<CustomField>
    <fullName>Total_of_Units_2__c</fullName>
    <label>Total # of Units (2)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>