fullSandbox11072023/force-app/main/default/objects/VPS__c/fields/Total_of_Units__c.field-meta.xml
<CustomField>
    <fullName>Total_of_Units__c</fullName>
    <label>Total # of Units</label>
    <length>3</length>
    <type>Text</type>
</CustomField>