fullSandbox11072023/force-app/main/default/objects/VPS__c/fields/X12_Month_Period__c.field-meta.xml
<CustomField>
    <fullName>X12_Month_Period__c</fullName>
    <formula>TEXT(Loaner_Start_Date_Adjusted__c) &amp;&quot; - &quot;&amp; TEXT(Loaner_End_Date_Adjusted__c)</formula>
    <inlineHelpText>This is the 12 month period that is being used for the calculations. This date is based off of the Loaner Expiration Date.</inlineHelpText>
    <label>12 Month Period</label>
    <type>Text</type>
</CustomField>