fullSandbox11072023/force-app/main/default/objects/VPS__c/recordTypes/Heater_Contracts.recordType-meta.xml
<RecordType>
    <fullName>Heater_Contracts</fullName>
    <active>true</active>
    <label>Heater Contracts</label>
</RecordType>