fullSandbox11072023/force-app/main/default/objects/VPS__c/validationRules/Heater_Contracts_Active.validationRule-meta.xml
<ValidationRule>
    <fullName>Heater_Contracts_Active</fullName>
    <active>true</active>
    <errorConditionFormula>( RecordType.DeveloperName =&quot;Heater Contracts&quot;) &amp;&amp; (Active__c= FALSE) &amp;&amp;  Days_to_Expire__c   &gt;  0</errorConditionFormula>
    <errorMessage>Please mark the speciality Contract as active.</errorMessage>
</ValidationRule>