fullSandbox11072023/force-app/main/default/objects/VPS__c/listViews/Expired_and_Not_Active.listView-meta.xml
<ListView>
    <fullName>Expired_and_Not_Active</fullName>
    <columns>Expired__c</columns>
    <columns>Active__c</columns>
    <columns>SAP__c</columns>
    <columns>NAME</columns>
    <columns>Sales_Rep__c</columns>
    <columns>RSM_Email__c</columns>
    <columns>Product__c</columns>
    <columns>Lease_Contract__c</columns>
    <columns>Loaner_Start_Date__c</columns>
    <columns>Loaner_Expiration_Date__c</columns>
    <columns>Days_to_Expire__c</columns>
    <columns>Total_of_Units__c</columns>
    <columns>Carts__c</columns>
    <columns>Ultrasound__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>VPS__c.VPS_Contracts</value>
    </filters>
    <filters>
        <field>Expired__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Expired and Not Active</label>
    <language>en_US</language>
</ListView>