fullSandbox11072023/force-app/main/default/objects/VPS__c/listViews/Expired_Heater_Contracts.listView-meta.xml
<ListView>
    <fullName>Expired_Heater_Contracts</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Contract_Product__c</columns>
    <columns>Loaner_Start_Date__c</columns>
    <columns>Loaner_Expiration_Date__c</columns>
    <columns>Consumable_Attainment__c</columns>
    <columns>Consumable_Spend__c</columns>
    <columns>Over_Under__c</columns>
    <columns>Agreement_Type__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>VPS__c.Heater_Contracts</value>
    </filters>
    <filters>
        <field>Expired__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Heater Expired Contracts</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinates>Respiratory_President</roleAndSubordinates>
    </sharedTo>
</ListView>