fullSandbox11072023/force-app/main/default/objects/VPS__c/listViews/Heater_Contracts.listView-meta.xml
<ListView>
    <fullName>Heater_Contracts</fullName>
    <columns>NAME</columns>
    <columns>R203P13__c</columns>
    <columns>R203P14__c</columns>
    <columns>R211P03_036__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>VPS__c.Heater_Contracts</value>
    </filters>
    <label>Heater Contracts All</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinates>Respiratory_President</roleAndSubordinates>
    </sharedTo>
</ListView>