fullSandbox11072023/force-app/main/default/objects/VPS__c/listViews/Manager_Rep_InActive.listView-meta.xml
<ListView>
    <fullName>Manager_Rep_InActive</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Rep_Active__c</columns>
    <columns>Manager_Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Manager_Active__c</field>
        <operation>notEqual</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Rep_Active__c</field>
        <operation>notEqual</operation>
        <value>1</value>
    </filters>
    <label>Manager/Rep InActive</label>
    <language>en_US</language>
</ListView>